# decapode

./: .gitignore  .gitmodules  Makefile  Procfile  README.md  app.py  cli.py  config.py  crawl.py  monitor.py  profiling.yml  requirements.dev.txt  requirements.txt  setup.cfg
.circleci/: config.yml
.github/workflows/: test.yml
decapode/: app.py  cli.py  config.py  context.py  crawl.py  kafka_consumer.py  kafka_integration.py  monitor.py
decapode/kafka/: consumer.py  producer.py
tests/: conftest.py  test_api.py  test_cli.py  test_crawler.py
