[metadata]
name = decapode
version = 0.1.0
description = Async metadata crawler for data.gouv.fr
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/abulte/decapode
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.9

[options]
packages = find:
include_package_data = True
py_modules = decapode
python_requires = >= 3.9
install_requires =
    minicli
    asyncpg
    aiohttp
    progressist
    humanfriendly
    tabulate
    marshmallow
    gunicorn

[options.extras_require]
test =
    aiohttp-devtools
    pytest
    pytest-asyncio
    aioresponses
    nest_asyncio

[options.entry_points]
console_scripts =
    decapode = decapode.cli:run
    decapode-crawl = decapode.crawl:run

[flake8]
max-line-length=99
