[metadata]
name = decapode
version = 0.1.0
description = Async metadata crawler for data.gouv.fr
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/etalab/decapode
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.9

[options]
packages = find:
include_package_data = True
py_modules = decapode
python_requires = >= 3.8
install_requires =
    kafka-python==2.0.2
    minicli
    asyncpg
    aiohttp
    progressist
    humanfriendly
    tabulate
    marshmallow
    gunicorn
    python-dateutil

[options.extras_require]
test =
    aiohttp-devtools
    pytest
    pytest-asyncio
    aioresponses
    nest_asyncio
    pytest-cov
    pytest-mock
report=
    pandas==1.2.2
    pandas_profiling<2.11.0
    jinja2<3.0.0
    MarkupSafe==2.0.1
    psycopg2-binary
    sqlalchemy

[options.entry_points]
console_scripts =
    decapode = decapode.cli:run
    decapode-crawl = decapode.crawl:run

[flake8]
max-line-length=99
